Try other postgres settings

--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -13,12 +13,12 @@
 
 [mediagoblin]
 direct_remote_path = /mgoblin_static/
-email_sender_address = "bci@poczta.onet.pl"
+#email_sender_address = 
 
 ## Uncomment and change to your DB's appropiate setting.
 ## Default is a local sqlite db "mediagoblin.db".
 ## Don't forget to run `./bin/gmg dbupdate` after having changed it.
-sql_engine = postgresql:///mediagoblin
+sql_engine = postgres://db:5432
 
 # Set to false to enable sending notices
 email_debug_mode = true
