--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -24,7 +24,7 @@ sql_engine = postgres://db:5432
 email_debug_mode = true
 
 # Set to false to disable registrations
-allow_registration = true
+allow_registration = false
 
 # Set to false to disable the ability for users to report offensive content
 allow_reporting = true
