Try to fix connection issues

--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -18,7 +18,7 @@ direct_remote_path = /mgoblin_static/
 ## Uncomment and change to your DB's appropiate setting.
 ## Default is a local sqlite db "mediagoblin.db".
 ## Don't forget to run `./bin/gmg dbupdate` after having changed it.
-sql_engine = postgres://db:5432
+sql_engine = postgres://mediagoblin:medi4goblinp455@db:5432/mediagoblin
 
 # Set to false to enable sending notices
 email_debug_mode = true
