--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         source: pgdata
         target: /var/lib/postgresql/data
       - ./postgres:/docker-entrypoint-initdb.d
+    expose:
+      - "5432"
 
   goblin:
     build:
@@ -30,8 +32,11 @@ services:
         target: /var/lib/mediagoblin
     depends_on: 
       - db
-    expose:
-      - "6543"
+    ports:
+      - target: 6543
+        published: 12080
+        protocol: tcp
+        mode: host
 
 volumes:
   pgdata:
