Fixes to allow service restarting by docker-compose

--- a/mediagoblin/Dockerfile
+++ b/mediagoblin/Dockerfile
@@ -143,4 +143,7 @@ COPY entrypoint.sh entrypoint.sh
 COPY mediagoblin_host.ini mediagoblin_host.ini
 COPY init-mediagoblin.sh init-mediagoblin.sh
 COPY user-dev-workaround.sh user-dev-workaround.sh
+RUN chmod +x ./entrypoint.sh
+RUN chmod +x init-mediagoblin.sh
+RUN chmod +x user-dev-workaround.sh
 CMD ["./entrypoint.sh"]
