--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -36,7 +36,7 @@ allow_reporting = true
 ## use the default theme).  Run `gmg assetlink` to apply the change.
 ## The airy and sandyseventiesspeedboat theme comes with GMG; please
 ## see the theming docs on how to install other themes.
-# theme = airy
+theme = airy
 
 ## If you want the terms of service displayed, you can uncomment this
 # show_tos = true
