--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -59,3 +59,4 @@ base_url = /mgoblin_media/
 [[mediagoblin.plugins.basic_auth]]
 [[mediagoblin.plugins.processing_info]]
 [[mediagoblin.media_types.image]]
+[[mediagoblin.media_types.video]]
