--- a/mediagoblin/mediagoblin_host.ini
+++ b/mediagoblin/mediagoblin_host.ini
@@ -60,3 +60,5 @@ base_url = /mgoblin_media/
 [[mediagoblin.plugins.processing_info]]
 [[mediagoblin.media_types.image]]
 [[mediagoblin.media_types.video]]
+[[mediagoblin_private]]
+deny_access = true
